Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -48,5 +48,6 @@
   "dhp177:4": "i samo zbog toga srećan je on i posle smrti. ",
   "dhp178:1": "Bolji od vlasti nad čitavim svetom, ",
   "dhp178:2": "bolji od odlaska na nebo ",
-  "dhp178:3": "i od božanstava u svetovima svim, "
+  "dhp178:3": "i od božanstava u svetovima svim, ",
+  "dhp178:4": "jeste prvi korak ka probuđenju. "
 }
