Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -1,4 +1,5 @@
 {
   "dhp179:0.1": "Kratka zbirka Budnih govora ",
-  "dhp179:0.2": "Reči mudrosti "
+  "dhp179:0.2": "Reči mudrosti ",
+  "dhp179:0.3": "Budni "
 }
