--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -1,5 +1,6 @@
 {
   "dhp179:0.1": "Kratka zbirka Budnih govora ",
   "dhp179:0.2": "Reči mudrosti ",
-  "dhp179:0.3": "Budni "
+  "dhp179:0.3": "Budni ",
+  "dhp179:1": "Pobedu mu u poraz pretvoriti ne može, "
 }
