Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -3,5 +3,6 @@
   "dhp179:0.2": "Reči mudrosti ",
   "dhp179:0.3": "Budni ",
   "dhp179:1": "Pobedu mu u poraz pretvoriti ne može, ",
-  "dhp179:2": "nit’ nadmašiti bilo ko, "
+  "dhp179:2": "nit’ nadmašiti bilo ko, ",
+  "dhp179:3": "taj Budni ničim ograničen, "
 }
