--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -5,5 +5,6 @@
   "dhp179:1": "Pobedu mu u poraz pretvoriti ne može, ",
   "dhp179:2": "nit’ nadmašiti bilo ko, ",
   "dhp179:3": "taj Budni ničim ograničen, ",
-  "dhp179:4": "čime zaveden može biti? "
+  "dhp179:4": "čime zaveden može biti? ",
+  "dhp180:1": "U njemu ni želje, ni žeđi nema, "
 }
