Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -7,5 +7,6 @@
   "dhp179:3": "taj Budni ničim ograničen, ",
   "dhp179:4": "čime zaveden može biti? ",
   "dhp180:1": "U njemu ni želje, ni žeđi nema, ",
-  "dhp180:2": "lukavog lovca što u klopku mami, "
+  "dhp180:2": "lukavog lovca što u klopku mami, ",
+  "dhp180:3": "taj Budni ničim ograničen, "
 }
