--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dhp180:2": "lukavog lovca što u klopku mami, ",
   "dhp180:3": "taj Budni ničim ograničen, ",
   "dhp180:4": "čime zaveden može biti? ",
-  "dhp181:1": "Mudraci, istrajni u meditaciji, "
+  "dhp181:1": "Mudraci, istrajni u meditaciji, ",
+  "dhp181:2": "obradovani obuzdanošću i mirom, "
 }
