--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -11,5 +11,6 @@
   "dhp180:3": "taj Budni ničim ograničen, ",
   "dhp180:4": "čime zaveden može biti? ",
   "dhp181:1": "Mudraci, istrajni u meditaciji, ",
-  "dhp181:2": "obradovani obuzdanošću i mirom, "
+  "dhp181:2": "obradovani obuzdanošću i mirom, ",
+  "dhp181:3": "čak i bogovima takvi su dragi, "
 }
