Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dhp180:4": "čime zaveden može biti? ",
   "dhp181:1": "Mudraci, istrajni u meditaciji, ",
   "dhp181:2": "obradovani obuzdanošću i mirom, ",
-  "dhp181:3": "čak i bogovima takvi su dragi, "
+  "dhp181:3": "čak i bogovima takvi su dragi, ",
+  "dhp181:4": "samoprobuđeni i sabrani. "
 }
