Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dhp181:1": "Mudraci, istrajni u meditaciji, ",
   "dhp181:2": "obradovani obuzdanošću i mirom, ",
   "dhp181:3": "čak i bogovima takvi su dragi, ",
-  "dhp181:4": "samoprobuđeni i sabrani. "
+  "dhp181:4": "samoprobuđeni i sabrani. ",
+  "dhp182:1": "Teško se biće kao čovek rađa "
 }
