Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -15,5 +15,6 @@
   "dhp181:3": "čak i bogovima takvi su dragi, ",
   "dhp181:4": "samoprobuđeni i sabrani. ",
   "dhp182:1": "Teško se biće kao čovek rađa ",
-  "dhp182:2": "i teško kao smrtnik živi, "
+  "dhp182:2": "i teško kao smrtnik živi, ",
+  "dhp182:3": "teško se čuje istinska Dhamma "
 }
