--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp182:1": "Teško se biće kao čovek rađa ",
   "dhp182:2": "i teško kao smrtnik živi, ",
   "dhp182:3": "teško se čuje istinska Dhamma ",
-  "dhp182:4": "i teško se Budni u svetu pojave. "
+  "dhp182:4": "i teško se Budni u svetu pojave. ",
+  "dhp183:1": "Od svega rđavog se okreni, "
 }
