Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -18,5 +18,6 @@
   "dhp182:2": "i teško kao smrtnik živi, ",
   "dhp182:3": "teško se čuje istinska Dhamma ",
   "dhp182:4": "i teško se Budni u svetu pojave. ",
-  "dhp183:1": "Od svega rđavog se okreni, "
+  "dhp183:1": "Od svega rđavog se okreni, ",
+  "dhp183:2": "svako dobro u sebi neguj "
 }
