--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -19,5 +19,6 @@
   "dhp182:3": "teško se čuje istinska Dhamma ",
   "dhp182:4": "i teško se Budni u svetu pojave. ",
   "dhp183:1": "Od svega rđavog se okreni, ",
-  "dhp183:2": "svako dobro u sebi neguj "
+  "dhp183:2": "svako dobro u sebi neguj ",
+  "dhp183:3": "srce i um svoj pročisti, "
 }
