--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -20,5 +20,6 @@
   "dhp182:4": "i teško se Budni u svetu pojave. ",
   "dhp183:1": "Od svega rđavog se okreni, ",
   "dhp183:2": "svako dobro u sebi neguj ",
-  "dhp183:3": "srce i um svoj pročisti, "
+  "dhp183:3": "srce i um svoj pročisti, ",
+  "dhp183:4": "to je učenje Budnih. "
 }
