--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -22,5 +22,6 @@
   "dhp183:2": "svako dobro u sebi neguj ",
   "dhp183:3": "srce i um svoj pročisti, ",
   "dhp183:4": "to je učenje Budnih. ",
-  "dhp184:1": "Strpljiva istrajnost je najviši asketizam, "
+  "dhp184:1": "Strpljiva istrajnost je najviši asketizam, ",
+  "dhp184:2": "smirenje krajnji cilj, kažu Bude. "
 }
