Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -23,5 +23,6 @@
   "dhp183:3": "srce i um svoj pročisti, ",
   "dhp183:4": "to je učenje Budnih. ",
   "dhp184:1": "Strpljiva istrajnost je najviši asketizam, ",
-  "dhp184:2": "smirenje krajnji cilj, kažu Bude. "
+  "dhp184:2": "smirenje krajnji cilj, kažu Bude. ",
+  "dhp184:3": "Nije monah ko povređuje druge, "
 }
