Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -24,5 +24,6 @@
   "dhp183:4": "to je učenje Budnih. ",
   "dhp184:1": "Strpljiva istrajnost je najviši asketizam, ",
   "dhp184:2": "smirenje krajnji cilj, kažu Bude. ",
-  "dhp184:3": "Nije monah ko povređuje druge, "
+  "dhp184:3": "Nije monah ko povređuje druge, ",
+  "dhp184:4": "niti asketa ko ih zlostavlja. "
 }
