Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp184:1": "Strpljiva istrajnost je najviši asketizam, ",
   "dhp184:2": "smirenje krajnji cilj, kažu Bude. ",
   "dhp184:3": "Nije monah ko povređuje druge, ",
-  "dhp184:4": "niti asketa ko ih zlostavlja. "
+  "dhp184:4": "niti asketa ko ih zlostavlja. ",
+  "dhp185:1": "Druge ne vređaj, niti povređuj, "
 }
