--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -27,5 +27,6 @@
   "dhp184:3": "Nije monah ko povređuje druge, ",
   "dhp184:4": "niti asketa ko ih zlostavlja. ",
   "dhp185:1": "Druge ne vređaj, niti povređuj, ",
-  "dhp185:2": "u zavetu obuzdan budi, "
+  "dhp185:2": "u zavetu obuzdan budi, ",
+  "dhp185:3": "u hrani uvek umeren, "
 }
