--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -28,5 +28,6 @@
   "dhp184:4": "niti asketa ko ih zlostavlja. ",
   "dhp185:1": "Druge ne vređaj, niti povređuj, ",
   "dhp185:2": "u zavetu obuzdan budi, ",
-  "dhp185:3": "u hrani uvek umeren, "
+  "dhp185:3": "u hrani uvek umeren, ",
+  "dhp185:4": "u osami ostani, meditirajući –to je učenje Budnih. "
 }
