--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -29,6 +29,6 @@
   "dhp185:1": "Druge ne vređaj, niti povređuj, ",
   "dhp185:2": "u zavetu obuzdan budi, ",
   "dhp185:3": "u hrani uvek umeren, ",
-  "dhp185:4": "u osami ostani, –to je učenje Budnih. ",
+  "dhp185:4": "u osami ostani, ",
   "dhp185:5": "meditirajući "
 }
