Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -30,5 +30,6 @@
   "dhp185:2": "u zavetu obuzdan budi, ",
   "dhp185:3": "u hrani uvek umeren, ",
   "dhp185:4": "u osami ostani, ",
-  "dhp185:5": "meditirajući "
+  "dhp185:5": "meditirajući ",
+  "dhp185:6": "to je učenje Budnih. "
 }
