--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -32,5 +32,6 @@
   "dhp185:4": "u osami ostani, ",
   "dhp185:5": "meditirajući ",
   "dhp185:6": "to je učenje Budnih. ",
-  "dhp186:1": "Žeđ čula utoliti ne može "
+  "dhp186:1": "Žeđ čula utoliti ne može ",
+  "dhp186:2": "ni kiša zlatnika. "
 }
