--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -33,5 +33,6 @@
   "dhp185:5": "meditirajući ",
   "dhp185:6": "to je učenje Budnih. ",
   "dhp186:1": "Žeđ čula utoliti ne može ",
-  "dhp186:2": "ni kiša zlatnika. "
+  "dhp186:2": "ni kiša zlatnika. ",
+  "dhp186:3": "Mudrac, razumevši da od toga radosti nema, "
 }
