Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -34,5 +34,6 @@
   "dhp185:6": "to je učenje Budnih. ",
   "dhp186:1": "Žeđ čula utoliti ne može ",
   "dhp186:2": "ni kiša zlatnika. ",
-  "dhp186:3": "Mudrac, razumevši da od toga radosti nema, "
+  "dhp186:3": "Mudrac, razumevši da od toga radosti nema, ",
+  "dhp186:4": "već samo bol, "
 }
