--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -36,5 +36,6 @@
   "dhp186:2": "ni kiša zlatnika. ",
   "dhp186:3": "Mudrac, razumevši da od toga radosti nema, ",
   "dhp186:4": "već samo bol, ",
-  "dhp187:1": "u sebi sklonosti "
+  "dhp187:1": "u sebi sklonosti ",
+  "dhp187:2": "čak i za nebeske užitke ne nalazi. "
 }
