Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -37,5 +37,6 @@
   "dhp186:3": "Mudrac, razumevši da od toga radosti nema, ",
   "dhp186:4": "već samo bol, ",
   "dhp187:1": "u sebi sklonosti ",
-  "dhp187:2": "čak i za nebeske užitke ne nalazi. "
+  "dhp187:2": "čak i za nebeske užitke ne nalazi. ",
+  "dhp187:3": "Učenik Budnih se "
 }
