Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -38,5 +38,6 @@
   "dhp186:4": "već samo bol, ",
   "dhp187:1": "u sebi sklonosti ",
   "dhp187:2": "čak i za nebeske užitke ne nalazi. ",
-  "dhp187:3": "Učenik Budnih se "
+  "dhp187:3": "Učenik Budnih se ",
+  "dhp187:4": "samo iskorenjivanju žudnje raduje. "
 }
