Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dhp187:2": "čak i za nebeske užitke ne nalazi. ",
   "dhp187:3": "Učenik Budnih se ",
   "dhp187:4": "samo iskorenjivanju žudnje raduje. ",
-  "dhp188:1": "Gonjeni strahom, "
+  "dhp188:1": "Gonjeni strahom, ",
+  "dhp188:2": "ljudi utočište traže na mestima raznim, "
 }
