--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp187:4": "samo iskorenjivanju žudnje raduje. ",
   "dhp188:1": "Gonjeni strahom, ",
   "dhp188:2": "ljudi utočište traže na mestima raznim, ",
-  "dhp188:3": "u planini ili šumi, "
+  "dhp188:3": "u planini ili šumi, ",
+  "dhp188:4": "u vrtovima, pod drvetom ili u hramu. "
 }
