--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -43,5 +43,6 @@
   "dhp188:1": "Gonjeni strahom, ",
   "dhp188:2": "ljudi utočište traže na mestima raznim, ",
   "dhp188:3": "u planini ili šumi, ",
-  "dhp188:4": "u vrtovima, pod drvetom ili u hramu. "
+  "dhp188:4": "u vrtovima, pod drvetom ili u hramu. ",
+  "dhp189:1": "To nisu sigurna utočišta, "
 }
