--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -45,5 +45,6 @@
   "dhp188:3": "u planini ili šumi, ",
   "dhp188:4": "u vrtovima, pod drvetom ili u hramu. ",
   "dhp189:1": "To nisu sigurna utočišta, ",
-  "dhp189:2": "to nisu konačna utočišta "
+  "dhp189:2": "to nisu konačna utočišta ",
+  "dhp189:3": "ni na jednom od njih "
 }
