Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -46,5 +46,6 @@
   "dhp188:4": "u vrtovima, pod drvetom ili u hramu. ",
   "dhp189:1": "To nisu sigurna utočišta, ",
   "dhp189:2": "to nisu konačna utočišta ",
-  "dhp189:3": "ni na jednom od njih "
+  "dhp189:3": "ni na jednom od njih ",
+  "dhp189:4": "izbavljenja od patnje nema. "
 }
