--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -47,5 +47,6 @@
   "dhp189:1": "To nisu sigurna utočišta, ",
   "dhp189:2": "to nisu konačna utočišta ",
   "dhp189:3": "ni na jednom od njih ",
-  "dhp189:4": "izbavljenja od patnje nema. "
+  "dhp189:4": "izbavljenja od patnje nema. ",
+  "dhp190:1": "Ko u Budi, Dhammi i Sanghi "
 }
