Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -48,5 +48,6 @@
   "dhp189:2": "to nisu konačna utočišta ",
   "dhp189:3": "ni na jednom od njih ",
   "dhp189:4": "izbavljenja od patnje nema. ",
-  "dhp190:1": "Ko u Budi, Dhammi i Sanghi "
+  "dhp190:1": "Ko u Budi, Dhammi i Sanghi ",
+  "dhp190:2": "utočište nađe, "
 }
