--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -49,5 +49,6 @@
   "dhp189:3": "ni na jednom od njih ",
   "dhp189:4": "izbavljenja od patnje nema. ",
   "dhp190:1": "Ko u Budi, Dhammi i Sanghi ",
-  "dhp190:2": "utočište nađe, "
+  "dhp190:2": "utočište nađe, ",
+  "dhp190:3": "ispravnim znanjem "
 }
