Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -50,5 +50,6 @@
   "dhp189:4": "izbavljenja od patnje nema. ",
   "dhp190:1": "Ko u Budi, Dhammi i Sanghi ",
   "dhp190:2": "utočište nađe, ",
-  "dhp190:3": "ispravnim znanjem "
+  "dhp190:3": "ispravnim znanjem ",
+  "dhp190:4": "četiri plemenite istine vidi: "
 }
