--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -51,5 +51,6 @@
   "dhp190:1": "Ko u Budi, Dhammi i Sanghi ",
   "dhp190:2": "utočište nađe, ",
   "dhp190:3": "ispravnim znanjem ",
-  "dhp190:4": "četiri plemenite istine vidi: "
+  "dhp190:4": "četiri plemenite istine vidi: ",
+  "dhp191:1": "patnju, "
 }
