Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -52,5 +52,6 @@
   "dhp190:2": "utočište nađe, ",
   "dhp190:3": "ispravnim znanjem ",
   "dhp190:4": "četiri plemenite istine vidi: ",
-  "dhp191:1": "patnju, "
+  "dhp191:1": "patnju, ",
+  "dhp191:2": "nastanak patnje, "
 }
