Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -53,5 +53,6 @@
   "dhp190:3": "ispravnim znanjem ",
   "dhp190:4": "četiri plemenite istine vidi: ",
   "dhp191:1": "patnju, ",
-  "dhp191:2": "nastanak patnje, "
+  "dhp191:2": "nastanak patnje, ",
+  "dhp191:3": "prestanak patnje i "
 }
