Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -54,5 +54,6 @@
   "dhp190:4": "četiri plemenite istine vidi: ",
   "dhp191:1": "patnju, ",
   "dhp191:2": "nastanak patnje, ",
-  "dhp191:3": "prestanak patnje i "
+  "dhp191:3": "prestanak patnje i ",
+  "dhp191:4": "plemeniti osmostruki put što iskorenjivanju patnje vodi. "
 }
