--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -55,5 +55,6 @@
   "dhp191:1": "patnju, ",
   "dhp191:2": "nastanak patnje, ",
   "dhp191:3": "prestanak patnje i ",
-  "dhp191:4": "plemeniti osmostruki put što iskorenjivanju patnje vodi. "
+  "dhp191:4": "plemeniti osmostruki put što iskorenjivanju patnje vodi. ",
+  "dhp192:1": "To jesu sigurna utočišta, "
 }
