Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -57,5 +57,6 @@
   "dhp191:3": "prestanak patnje i ",
   "dhp191:4": "plemeniti osmostruki put što iskorenjivanju patnje vodi. ",
   "dhp192:1": "To jesu sigurna utočišta, ",
-  "dhp192:2": "to jesu konačna utočišta, "
+  "dhp192:2": "to jesu konačna utočišta, ",
+  "dhp192:3": "na svakom od njih "
 }
