Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -59,5 +59,6 @@
   "dhp192:1": "To jesu sigurna utočišta, ",
   "dhp192:2": "to jesu konačna utočišta, ",
   "dhp192:3": "na svakom od njih ",
-  "dhp192:4": "izbavljenja od patnje ima. "
+  "dhp192:4": "izbavljenja od patnje ima. ",
+  "dhp193:1": "Retki su oni koji znaju, "
 }
