--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -60,5 +60,6 @@
   "dhp192:2": "to jesu konačna utočišta, ",
   "dhp192:3": "na svakom od njih ",
   "dhp192:4": "izbavljenja od patnje ima. ",
-  "dhp193:1": "Retki su oni koji znaju, "
+  "dhp193:1": "Retki su oni koji znaju, ",
+  "dhp193:2": "takvi se ne rađaju na svakom mestu; "
 }
