Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -61,5 +61,6 @@
   "dhp192:3": "na svakom od njih ",
   "dhp192:4": "izbavljenja od patnje ima. ",
   "dhp193:1": "Retki su oni koji znaju, ",
-  "dhp193:2": "takvi se ne rađaju na svakom mestu; "
+  "dhp193:2": "takvi se ne rađaju na svakom mestu; ",
+  "dhp193:3": "tamo gde se mudrac rodi, "
 }
