Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -63,5 +63,6 @@
   "dhp193:1": "Retki su oni koji znaju, ",
   "dhp193:2": "takvi se ne rađaju na svakom mestu; ",
   "dhp193:3": "tamo gde se mudrac rodi, ",
-  "dhp193:4": "taj klan sreću zadobija. "
+  "dhp193:4": "taj klan sreću zadobija. ",
+  "dhp194:1": "Sreća je rođenje Budnoga, "
 }
