Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -64,5 +64,6 @@
   "dhp193:2": "takvi se ne rađaju na svakom mestu; ",
   "dhp193:3": "tamo gde se mudrac rodi, ",
   "dhp193:4": "taj klan sreću zadobija. ",
-  "dhp194:1": "Sreća je rođenje Budnoga, "
+  "dhp194:1": "Sreća je rođenje Budnoga, ",
+  "dhp194:2": "sreća je govor o Dhammi, "
 }
