Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -65,5 +65,6 @@
   "dhp193:3": "tamo gde se mudrac rodi, ",
   "dhp193:4": "taj klan sreću zadobija. ",
   "dhp194:1": "Sreća je rođenje Budnoga, ",
-  "dhp194:2": "sreća je govor o Dhammi, "
+  "dhp194:2": "sreća je govor o Dhammi, ",
+  "dhp194:3": "sreća je sloga među monasima, "
 }
