--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -67,5 +67,6 @@
   "dhp194:1": "Sreća je rođenje Budnoga, ",
   "dhp194:2": "sreća je govor o Dhammi, ",
   "dhp194:3": "sreća je sloga među monasima, ",
-  "dhp194:4": "njihova predanost jeste sreća. "
+  "dhp194:4": "njihova predanost jeste sreća. ",
+  "dhp195:1": "Ko štuje vredne poštovanja, "
 }
