Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -68,5 +68,6 @@
   "dhp194:2": "sreća je govor o Dhammi, ",
   "dhp194:3": "sreća je sloga među monasima, ",
   "dhp194:4": "njihova predanost jeste sreća. ",
-  "dhp195:1": "Ko štuje vredne poštovanja, "
+  "dhp195:1": "Ko štuje vredne poštovanja, ",
+  "dhp195:2": "Bude ili učenike njihove, "
 }
