Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -69,5 +69,6 @@
   "dhp194:3": "sreća je sloga među monasima, ",
   "dhp194:4": "njihova predanost jeste sreća. ",
   "dhp195:1": "Ko štuje vredne poštovanja, ",
-  "dhp195:2": "Bude ili učenike njihove, "
+  "dhp195:2": "Bude ili učenike njihove, ",
+  "dhp195:3": "one što su prepreke savladali, "
 }
