Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -71,5 +71,6 @@
   "dhp195:1": "Ko štuje vredne poštovanja, ",
   "dhp195:2": "Bude ili učenike njihove, ",
   "dhp195:3": "one što su prepreke savladali, ",
-  "dhp195:4": "oslobodili se tuge i očaja, "
+  "dhp195:4": "oslobodili se tuge i očaja, ",
+  "dhp196:1": "zasluge takvoga "
 }
