Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -72,5 +72,6 @@
   "dhp195:2": "Bude ili učenike njihove, ",
   "dhp195:3": "one što su prepreke savladali, ",
   "dhp195:4": "oslobodili se tuge i očaja, ",
-  "dhp196:1": "zasluge takvoga "
+  "dhp196:1": "zasluge takvoga ",
+  "dhp196:2": "ko štuje utihnule i neustrašive, "
 }
