--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp179-196_translation-sr-brankokovacevic.json
@@ -73,5 +73,6 @@
   "dhp195:3": "one što su prepreke savladali, ",
   "dhp195:4": "oslobodili se tuge i očaja, ",
   "dhp196:1": "zasluge takvoga ",
-  "dhp196:2": "ko štuje utihnule i neustrašive, "
+  "dhp196:2": "ko štuje utihnule i neustrašive, ",
+  "dhp196:3": "niko tačno "
 }
