Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -1,4 +1,5 @@
 {
   "dhp197:0.1": "Kratka zbirka Budnih govora ",
-  "dhp197:0.2": "Reči mudrosti "
+  "dhp197:0.2": "Reči mudrosti ",
+  "dhp197:0.3": "Sreća "
 }
