--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -3,5 +3,6 @@
   "dhp197:0.2": "Reči mudrosti ",
   "dhp197:0.3": "Sreća ",
   "dhp197:1": "Ah kako srećni živimo bez mržnje, ",
-  "dhp197:2": "okruženi mrziteljima; "
+  "dhp197:2": "okruženi mrziteljima; ",
+  "dhp197:3": "među ljudima punim mržnje, "
 }
