Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -4,5 +4,6 @@
   "dhp197:0.3": "Sreća ",
   "dhp197:1": "Ah kako srećni živimo bez mržnje, ",
   "dhp197:2": "okruženi mrziteljima; ",
-  "dhp197:3": "među ljudima punim mržnje, "
+  "dhp197:3": "među ljudima punim mržnje, ",
+  "dhp197:4": "bez mržnje boravimo. "
 }
