Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -6,5 +6,6 @@
   "dhp197:2": "okruženi mrziteljima; ",
   "dhp197:3": "među ljudima punim mržnje, ",
   "dhp197:4": "bez mržnje boravimo. ",
-  "dhp198:1": "Ah kako srećni živimo bez bolesti, "
+  "dhp198:1": "Ah kako srećni živimo bez bolesti, ",
+  "dhp198:2": "okruženi bolesnima; "
 }
