Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -8,5 +8,6 @@
   "dhp197:4": "bez mržnje boravimo. ",
   "dhp198:1": "Ah kako srećni živimo bez bolesti, ",
   "dhp198:2": "okruženi bolesnima; ",
-  "dhp198:3": "među ljudima punim bolesti, "
+  "dhp198:3": "među ljudima punim bolesti, ",
+  "dhp198:4": "bez bolesti boravimo. "
 }
