Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dhp198:2": "okruženi bolesnima; ",
   "dhp198:3": "među ljudima punim bolesti, ",
   "dhp198:4": "bez bolesti boravimo. ",
-  "dhp199:1": "Ah kako srećni živimo bez strasti, "
+  "dhp199:1": "Ah kako srećni živimo bez strasti, ",
+  "dhp199:2": "među zaslepljenima; "
 }
