Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dhp198:4": "bez bolesti boravimo. ",
   "dhp199:1": "Ah kako srećni živimo bez strasti, ",
   "dhp199:2": "među zaslepljenima; ",
-  "dhp199:3": "među ljudima slepim od strasti, "
+  "dhp199:3": "među ljudima slepim od strasti, ",
+  "dhp199:4": "bez strasti boravimo. "
 }
