--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dhp199:1": "Ah kako srećni živimo bez strasti, ",
   "dhp199:2": "među zaslepljenima; ",
   "dhp199:3": "među ljudima slepim od strasti, ",
-  "dhp199:4": "bez strasti boravimo. "
+  "dhp199:4": "bez strasti boravimo. ",
+  "dhp200:1": "Ah kako srećni živimo, "
 }
