Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -15,5 +15,6 @@
   "dhp199:3": "među ljudima slepim od strasti, ",
   "dhp199:4": "bez strasti boravimo. ",
   "dhp200:1": "Ah kako srećni živimo, ",
-  "dhp200:2": "mi koji ništa nemamo, "
+  "dhp200:2": "mi koji ništa nemamo, ",
+  "dhp200:3": "hraneći se blaženstvom boravimo, "
 }
