Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -16,5 +16,6 @@
   "dhp199:4": "bez strasti boravimo. ",
   "dhp200:1": "Ah kako srećni živimo, ",
   "dhp200:2": "mi koji ništa nemamo, ",
-  "dhp200:3": "hraneći se blaženstvom boravimo, "
+  "dhp200:3": "hraneći se blaženstvom boravimo, ",
+  "dhp200:4": "nalik bogovima blistavim. "
 }
