--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp200:1": "Ah kako srećni živimo, ",
   "dhp200:2": "mi koji ništa nemamo, ",
   "dhp200:3": "hraneći se blaženstvom boravimo, ",
-  "dhp200:4": "nalik bogovima blistavim. "
+  "dhp200:4": "nalik bogovima blistavim. ",
+  "dhp201:1": "Pobeda rađa mržnju, "
 }
