Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -19,5 +19,6 @@
   "dhp200:3": "hraneći se blaženstvom boravimo, ",
   "dhp200:4": "nalik bogovima blistavim. ",
   "dhp201:1": "Pobeda rađa mržnju, ",
-  "dhp201:2": "u mukama ostaje poraženi; "
+  "dhp201:2": "u mukama ostaje poraženi; ",
+  "dhp201:3": "utihnuli boravi srećan, "
 }
