--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -21,5 +21,6 @@
   "dhp201:1": "Pobeda rađa mržnju, ",
   "dhp201:2": "u mukama ostaje poraženi; ",
   "dhp201:3": "utihnuli boravi srećan, ",
-  "dhp201:4": "napustivši i pobedu i poraz. "
+  "dhp201:4": "napustivši i pobedu i poraz. ",
+  "dhp202:1": "Nema vatre kakva je pohlepa, "
 }
