--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -22,5 +22,6 @@
   "dhp201:2": "u mukama ostaje poraženi; ",
   "dhp201:3": "utihnuli boravi srećan, ",
   "dhp201:4": "napustivši i pobedu i poraz. ",
-  "dhp202:1": "Nema vatre kakva je pohlepa, "
+  "dhp202:1": "Nema vatre kakva je pohlepa, ",
+  "dhp202:2": "ni zla poput mržnje; "
 }
