Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -23,5 +23,6 @@
   "dhp201:3": "utihnuli boravi srećan, ",
   "dhp201:4": "napustivši i pobedu i poraz. ",
   "dhp202:1": "Nema vatre kakva je pohlepa, ",
-  "dhp202:2": "ni zla poput mržnje; "
+  "dhp202:2": "ni zla poput mržnje; ",
+  "dhp202:3": "nema boljke kakva su sastojci bića, "
 }
