--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -26,5 +26,6 @@
   "dhp202:2": "ni zla poput mržnje; ",
   "dhp202:3": "nema boljke kakva su sastojci bića, ",
   "dhp202:4": "niti sreće poput spokojstva. ",
-  "dhp203:1": "Glad je najveća muka, "
+  "dhp203:1": "Glad je najveća muka, ",
+  "dhp203:2": "uslovljene stvari najveća patnja; "
 }
