Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -27,5 +27,6 @@
   "dhp202:3": "nema boljke kakva su sastojci bića, ",
   "dhp202:4": "niti sreće poput spokojstva. ",
   "dhp203:1": "Glad je najveća muka, ",
-  "dhp203:2": "uslovljene stvari najveća patnja; "
+  "dhp203:2": "uslovljene stvari najveća patnja; ",
+  "dhp203:3": "onom ko ovo zaista razume, "
 }
