Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -29,5 +29,6 @@
   "dhp203:1": "Glad je najveća muka, ",
   "dhp203:2": "uslovljene stvari najveća patnja; ",
   "dhp203:3": "onom ko ovo zaista razume, ",
-  "dhp203:4": "utrnuće je najveća sreća. "
+  "dhp203:4": "utrnuće je najveća sreća. ",
+  "dhp204:1": "Zdravlje je najveći dobitak, "
 }
