--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -31,5 +31,6 @@
   "dhp203:3": "onom ko ovo zaista razume, ",
   "dhp203:4": "utrnuće je najveća sreća. ",
   "dhp204:1": "Zdravlje je najveći dobitak, ",
-  "dhp204:2": "zadovoljenost najveće blago, "
+  "dhp204:2": "zadovoljenost najveće blago, ",
+  "dhp204:3": "pouzdan čovek najbolji je srodnik, "
 }
