Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -32,5 +32,6 @@
   "dhp203:4": "utrnuće je najveća sreća. ",
   "dhp204:1": "Zdravlje je najveći dobitak, ",
   "dhp204:2": "zadovoljenost najveće blago, ",
-  "dhp204:3": "pouzdan čovek najbolji je srodnik, "
+  "dhp204:3": "pouzdan čovek najbolji je srodnik, ",
+  "dhp204:4": "smirenje najveća sreća. "
 }
